# reespirator-beagle-touch

./: .eslintrc  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  Makefile  README.md  docker-compose.yml  reespirator_ui.py  requirements.txt  respyratorctl  sample.data  setup.cfg
respyrator/: core.py  serial.py  ui.py  ui_main.ui
scripts/: startUI.sh
software/: reespirator_ui.py
source/: testQt.ui
src/: respyratorctl
src/respyrator/: .serial.py.swp  .ui.py.swp  __init__.py  ui.py  ui_main.ui
systemd/: resp.service
tests/: __init__.py  test_core.py
