[metadata]
name = resPyRator
description = "Python software for the respeerator."
long_description = file: README.md

version = 0.0.1
author = CoronavirusMakers
url = https://gitlab.com/coronavirusmakers/reespirator-beagle-touch
license = GPL3
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: X11 Applications :: Qt
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires >= 3.6
# PACKAGE DEPENDENCIES ARE DEFINED HERE:
install_requires =
    docopt==0.6.2
    PySide2==5.14.1
    pyyaml==5.3.1
    pyserial==3.4
    PyQt5==5.14.0
    pyqtgraph==0.10.0


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
dev =
    check-manifest
    wheel
test =
    pytest
    flake8


[options.entry_points]
# To provide executable scripts, use entry points in preference to the
# "scripts" keyword. Entry points provide cross-platform support and allow
# pip to create the appropriate form of executable for the target platform.
console_scripts =
    respyratorctl = respyrator.cli:cli


[options.package_data]
sample = package_data.dat


[egg_info]
tag_build = .dev
tag_date = 1
egg_base = src

[aliases]
release = egg_info -Db ''


[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True
